# squele

./: CMakeLists.txt  README.md
include/squele/components/: flushable.hpp  listenable.hpp  syncable.hpp
include/squele/core/: concepts.hpp  ledger.hpp
